# VaultSync

./: .gitignore  CMakeLists.txt  README.md
include/: common.h
include/cli/: cli_main.h  cli_vm.h
include/crypto/: hashing.h
include/logging/: logger.h
include/vm/: author.h  commit.h  common.h  file.h  hashmap.h  repository.h  snapshot_tree.h
scripts/: setup.sh  uninstall.sh
src/: common.c  main.c
src/cli/: cli_main.c  cli_vm.c
src/crypto/: hashing.c
src/logging/: logger.c
src/vm/: commit.c  common.c  file.c  hashmap.c  repository.c
test/: main_test.c
